--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "dashboard",
-  "version": "0.0.0",
-  "description": "tet",
+  "name": "library",
+  "version": "1.0.0",
+  "description": "- [x] Этот пример выполнен\r - [x] Скопировать мой пример и исправить на своё\r - [ ] Добавить файлик .gitignore\r - [x] Каждый раз изменять и дополнять выполненные задачи\r - [x] Выбрать шаблонизатор\r - [x] Выбрать дизайн\r - [ ] Сверстать на выбранном шаблонизаторе(на все 100%, за исключением небольшого кода)\r - [ ] Убрать весь статический текст и составить файл json формата, с содержимым(доски, задачи и тд)\r - [ ] Разобраться как вставить текст из json формата и вставить таки его",
   "main": "index.js",
-  "homepage": "",
-  "author": "",
   "scripts": {
-    "install": "npm install ",
-    "start": "node server",
-    "server": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-handlebars": "^6.0.6",
+    "hbs": "^4.2.0",
+    "json-server": "^0.17.1",
     "jsonfile": "^6.1.0",
-    "morgan": "^1.10.0",
+    "nodemon": "^2.0.20",
     "pug": "^3.0.2"
   },
   "devDependencies": {
-    "logger-service": "^1.0.2",
-    "nodemon": "^2.0.20"
-  },
-  "license": "ISC"
+    "logger-service": "^1.0.2"
+  }
 }
