--- a/package.json
+++ b/package.json
@@ -4,30 +4,27 @@
   "description": "- [x] Этот пример выполнен\r - [x] Скопировать мой пример и исправить на своё\r - [ ] Добавить файлик .gitignore\r - [x] Каждый раз изменять и дополнять выполненные задачи\r - [x] Выбрать шаблонизатор\r - [x] Выбрать дизайн\r - [ ] Сверстать на выбранном шаблонизаторе(на все 100%, за исключением небольшого кода)\r - [ ] Убрать весь статический текст и составить файл json формата, с содержимым(доски, задачи и тд)\r - [ ] Разобраться как вставить текст из json формата и вставить таки его",
   "main": "index.js",
   "scripts": {
-    "test": "mocha *.test.js"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "-": "0.0.1",
     "body-parser": "^1.20.1",
     "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.8",
-    "expect": "^29.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "hbs": "^4.2.0",
     "json-server": "^0.17.1",
     "jsonfile": "^6.1.0",
-    "mocha": "^10.1.0",
-    "nock": "^13.2.9",
     "nodemon": "^2.0.20",
-    "pug": "^3.0.2",
-    "save-dev": "0.0.1-security",
-    "supertest": "^6.3.1"
+    "pug": "^3.0.2"
   },
   "devDependencies": {
-    "logger-service": "^1.0.2"
+    "logger-service": "^1.0.2",
+    "mocha": "^10.2.0",
+    "supertest": "^6.3.3"
   }
 }
