--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hbs": "^4.2.0",
     "json-server": "^0.17.1",
     "jsonfile": "^6.1.0",
+    "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.20",
     "pug": "^3.0.2"
   },
